--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
               <a class="nav-link" href="{% url 'profile' %}">Profile</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'transactions:transaction_list' %}">Transactions</a>
+            </li>
+            <li class="nav-item">
               <form method="post" action="{% url 'logout' %}" class="d-inline">
                 {% csrf_token %}
                 <button
