--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,10 @@
     <h1 class="display-5 fw-bold">Welcome to MoneyParce</h1>
     <p class="col-md-8 fs-4">Your personal finance management solution</p>
     {% if user.is_authenticated %}
-    <a href="{% url 'profile' %}" class="btn btn-primary btn-lg"
-      >View Your Profile</a
-    >
+    <div class="mb-3">
+      <a href="{% url 'profile' %}" class="btn btn-primary btn-lg">View Your Profile</a>
+      <a href="{% url 'transactions:transaction_list' %}" class="btn btn-success btn-lg">Manage Transactions</a>
+    </div>
     {% else %}
     <a href="{% url 'register' %}" class="btn btn-primary btn-lg"
       >Get Started</a
