--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,14 @@
               <a class="nav-link" href="{% url 'transactions:transaction_list' %}">Transactions</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'charts:dashboard' %}">Spending Charts</a>
+            </li>
+            {% if user.age is not None and user.age >= 18 and user.age <= 22 %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'scholarships:dashboard' %}">Scholarships</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
               <form method="post" action="{% url 'logout' %}" class="d-inline">
                 {% csrf_token %}
                 <button
@@ -63,5 +71,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    {% block extra_js %}{% endblock %}
   </body>
 </html>
