--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link 
+      rel="stylesheet" 
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -32,6 +36,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'charts:dashboard' %}">Spending Charts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'reports:yearly_report' %}">Yearly Report</a>
             </li>
             {% if user.age is not None and user.age >= 18 and user.age <= 22 %}
             <li class="nav-item">
