--- a/templates/budgets/dashboard.html
+++ b/templates/budgets/dashboard.html
@@ -9,9 +9,6 @@
             <p class="text-muted">{{ current_month }}</p>
         </div>
         <div class="col-md-6 text-end">
-            <a href="{% url 'budgets:create_category' %}" class="btn btn-outline-primary me-2">
-                <i class="fas fa-plus"></i> New Category
-            </a>
             <a href="{% url 'budgets:create_budget' %}" class="btn btn-primary">
                 <i class="fas fa-plus"></i> New Budget
             </a>
@@ -55,10 +52,10 @@
                                         <td>{{ budget.month|date:"F Y" }}</td>
                                         <td>
                                             <a href="{% url 'budgets:edit_budget' budget.id %}" class="btn btn-sm btn-outline-primary">
-                                                <i class="fas fa-edit"></i>
+                                                <i class="fas fa-edit"></i> Edit
                                             </a>
                                             <a href="{% url 'budgets:delete_budget' budget.id %}" class="btn btn-sm btn-outline-danger">
-                                                <i class="fas fa-trash"></i>
+                                                <i class="fas fa-trash"></i> Delete
                                             </a>
                                         </td>
                                     </tr>
