--- a/templates/goals/goal_list.html
+++ b/templates/goals/goal_list.html
@@ -24,18 +24,19 @@
                         Target: ${{ goal.target_amount }}<br>
                         Current: ${{ goal.current_amount }}
                     </p>
-                    <div class="progress mb-3">
-                        <div class="progress-bar" role="progressbar" 
-                             style="width: {{ goal.progress_percentage }}%"
-                             aria-valuenow="{{ goal.progress_percentage }}" 
-                             aria-valuemin="0" 
+                    <div class="progress mt-auto mb-3" style="height: 30px;">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                             role="progressbar"
+                             style="width: {{ goal.progress_percentage }}%;"
+                             aria-valuenow="{{ goal.progress_percentage }}"
+                             aria-valuemin="0"
                              aria-valuemax="100">
                             {{ goal.progress_percentage|floatformat:1 }}%
                         </div>
                     </div>
-                    <div class="d-flex gap-3">
-                        <a href="{% url 'goals:contribute_to_goal' goal.id %}" class="btn btn-success">Contribute</a>
-                        <a href="{% url 'goals:delete_goal' goal.id %}" class="btn btn-danger">Delete</a>
+                    <div class="d-flex justify-content-end gap-2">
+                        <a href="{% url 'goals:contribute_to_goal' goal.id %}" class="btn btn-sm btn-success">Contribute</a>
+                        <a href="{% url 'goals:delete_goal' goal.id %}" class="btn btn-sm btn-danger">Delete</a>
                     </div>
                 </div>
             </div>
