--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
           <li class="nav-item me-3">
             <a class="nav-link" href="{% url 'profile' %}"><i class="bi bi-person-circle"></i> Profile</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mt-2">
             <form method="post" action="{% url 'logout' %}" class="d-inline">
               {% csrf_token %}
               <button type="submit" class="btn nav-link border-0 bg-transparent p-0">
@@ -63,7 +63,7 @@
           </li>
           {% else %}
           <li class="nav-item me-3">
-            <a class="nav-link" href="{% url 'login' %}"><i class="bi bi-box-arrow-in-right"></i> Login</a>
+            <a class="nav-link" href="{% url 'two_factor:login' %}"><i class="bi bi-box-arrow-in-right"></i> Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'register' %}"><i class="bi bi-person-plus-fill"></i> Register</a>
@@ -139,7 +139,7 @@
           </li>
           {% else %}
           <li>
-            <a href="{% url 'login' %}" class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
+            <a href="{% url 'two_factor:login' %}" class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
               <i class="bi bi-box-arrow-in-right"></i> Login
             </a>
           </li>
