--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -10,7 +10,7 @@
       <div class="card-body">
         <p>You have been successfully logged out.</p>
         <div class="mt-3">
-          <a href="{% url 'login' %}" class="btn btn-primary">Log In Again</a>
+          <a href="{% url 'two_factor:login' %}" class="btn btn-primary">Log In Again</a>
           <a href="{% url 'home' %}" class="btn btn-outline-secondary"
             >Return to Home</a
           >
