--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -22,7 +22,7 @@
           <button type="submit" class="btn btn-primary">Reset Password</button>
         </form>
         <div class="mt-3">
-          <p><a href="{% url 'login' %}">Back to Login</a></p>
+          <p><a href="{% url 'two_factor:login' %}">Back to Login</a></p>
         </div>
       </div>
     </div>
