--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -10,7 +10,7 @@
       <div class="card-body">
         <p>Your password has been set. You may go ahead and log in now.</p>
         <div class="mt-3">
-          <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+          <a href="{% url 'two_factor:login' %}" class="btn btn-primary">Login</a>
         </div>
       </div>
     </div>
