--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -18,7 +18,7 @@
           address you registered with, and check your spam folder.
         </p>
         <div class="mt-3">
-          <a href="{% url 'login' %}" class="btn btn-primary"
+          <a href="{% url 'two_factor:login' %}" class="btn btn-primary"
             >Return to Login</a
           >
         </div>
