--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -55,7 +55,7 @@
           <button type="submit" class="btn btn-primary">Register</button>
         </form>
         <div class="mt-3">
-          <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+          <p>Already have an account? <a href="{% url 'two_factor:login' %}">Login</a></p>
         </div>
       </div>
     </div>
